--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,9 +3,22 @@
 
 <head>
     <meta charset="UTF-8">
+
+    <title>Meadowlark Travel</title>
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Meadowlark Travel</title>
+
+    {{#if showTests}}
+        <link rel="stylesheet" href="/vendor/mocha.css">
+    {{/if}}
+    <script src="/vendor/jquery.js"></script>
+
+    <style>
+        img {
+            max-width: 80%;
+        }
+    </style>
 </head>
 
 <body>
@@ -13,6 +26,21 @@
         <img src="/img/logo.jpg" alt="Meadowlark Travel Logo">
     </header>
     {{{body}}}
+
+
+{{#if showTests}}
+    <div id="mocha"></div>
+    <script src="/vendor/mocha.js"></script>
+    <script src="/vendor/chai.js"></script>
+    <script>
+        mocha.ui('tdd');
+        var assert = chai.assert;
+    </script>
+    <script src="/qa/tests_global.js"></script>
+    {{#if pageTestScript}}
+        <script src="{{pageTestScript}}"></script>
+    {{/if}}
+{{/if}}
 </body>
 
 </html>
